
[gd_scene load_steps=29 format=3 uid="uid://dovwaqnf20rb5"]


[ext_resource type="Texture2D" uid="uid://b83ssuu0ktyd8" path="res://Art/character/survivalgame-enemy-slime.png" id="1_fwice"]
[ext_resource type="Script" path="res://Scripts/ai/slime.gd" id="1_m2yhv"]
[ext_resource type="PackedScene" uid="uid://bd7t48nvcjom2" path="res://Scenes/collectables/slime_collectable.tscn" id="3_42oqm"]
[ext_resource type="PackedScene" uid="uid://dlaulvfxk1dir" path="res://Scenes/collectables/lighter_collectable.tscn" id="4_u7rcr"]

[ext_resource type="PackedScene" uid="uid://cnu1llud77elp" path="res://Scenes/collectables/ruby_collectable.tscn" id="5_wlb7k"]

[ext_resource type="PackedScene" uid="uid://cgumsabfxhisk" path="res://healthbar/healthbar.tscn" id="5_flvhd"]


[sub_resource type="AtlasTexture" id="AtlasTexture_747lh"]
atlas = ExtResource("1_fwice")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_21ckw"]
atlas = ExtResource("1_fwice")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dplf"]
atlas = ExtResource("1_fwice")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrhb8"]
atlas = ExtResource("1_fwice")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ei2ck"]
atlas = ExtResource("1_fwice")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsdg8"]
atlas = ExtResource("1_fwice")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_65jex"]
atlas = ExtResource("1_fwice")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_obuyd"]
atlas = ExtResource("1_fwice")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdixc"]
atlas = ExtResource("1_fwice")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4msjc"]
atlas = ExtResource("1_fwice")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_25khi"]
atlas = ExtResource("1_fwice")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybqdv"]
atlas = ExtResource("1_fwice")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3mgm"]
atlas = ExtResource("1_fwice")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5q63l"]
atlas = ExtResource("1_fwice")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pduvt"]
atlas = ExtResource("1_fwice")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lj200"]
atlas = ExtResource("1_fwice")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1qce"]
atlas = ExtResource("1_fwice")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ca7ly"]
atlas = ExtResource("1_fwice")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_mjrqi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_747lh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21ckw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dplf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrhb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ei2ck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsdg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65jex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obuyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdixc")
}],
"loop": false,
"name": &"death",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4msjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25khi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybqdv")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3mgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5q63l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pduvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lj200")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1qce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ca7ly")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_nn6lg"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qc6ub"]
radius = 7.07107

[sub_resource type="CircleShape2D" id="CircleShape2D_nr7c2"]
radius = 98.0051

[sub_resource type="CircleShape2D" id="CircleShape2D_524t6"]

[node name="slime" type="CharacterBody2D"]
script = ExtResource("1_m2yhv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mjrqi")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nn6lg")
debug_color = Color(5.10186e-06, 0.566549, 0.661442, 0.42)

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CircleShape2D_qc6ub")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_nr7c2")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="find_player_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="find_player_area"]
scale = Vector2(-100.278, -100.278)
shape = SubResource("CircleShape2D_524t6")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="slime_collectable" parent="." instance=ExtResource("3_42oqm")]
visible = false
collision_layer = 0
collision_mask = 0

[node name="lighter_collectable" parent="." instance=ExtResource("4_u7rcr")]
visible = false
collision_layer = 0
collision_mask = 0


[node name="ruby_collectable" parent="." instance=ExtResource("5_wlb7k")]
visible = false

[node name="Slow_timer" type="Timer" parent="."]
wait_time = 10.0

[node name="Shock_timer" type="Timer" parent="."]

[node name="Healthbar" parent="." instance=ExtResource("5_flvhd")]
offset_left = -11.0
offset_top = -17.0
offset_right = 69.0
offset_bottom = -2.0
scale = Vector2(0.28, 0.28)


[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="find_player_area" to="." method="_on_find_player_area_body_entered"]
[connection signal="timeout" from="Slow_timer" to="." method="_on_slow_timer_timeout"]
[connection signal="timeout" from="Shock_timer" to="." method="_on_shock_timer_timeout"]
